@startuml

class Computelet {
  +ports: Map<String, Port>
  +onMessage(port: Port, msg: Message): Iterable<OutputAction>
}

class Port {
  +name: String
  +direction: PortDirection
  +cardinality: Cardinality
  -links: List<Link>
  +link(peer: Port): Link
  +unlink(link: Link)
  +broadcast(protocol: Protocol, payload: Any)
  +sendTo(link: Link, protocol: Protocol, payload: Any)
}

enum PortDirection {
  INPUT
  OUTPUT
  BIDIRECTIONAL
}

enum Cardinality {
  SINGLE
  MULTIPLE
}

class Link {
  -a: Port
  -b: Port
  +other(from: Port): Port
  +send(from: Port, protocol: Protocol, payload: Any)
}

class Message {
  +link: Link
  +protocol: Protocol
  +payload: Any
}

class Protocol {
}

class Emit {
}

class Broadcast extends Emit {
  +port: Port
  +protocol: Protocol
  +payload: Any
}

class Unicast extends Emit {
  +port: Port
  +link: Link
  +protocol: Protocol
  +payload: Any
}

Computelet "1" --> "many" Port
Port "many" --> "many" Link
Link --> Port : from
Link --> Port : to
Message --> Link
Message --> Protocol
Computelet --> Emit

@enduml